--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Applicaster Assignment</string>
     <string name="action_settings">Settings</string>
     <string name="published_at">Published at: %s</string>
+    <string name="video_init_error">there was an error initialising the video: %s</string>
 </resources>
