more work done on the player fragment and date formating.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="published_at">Published at: %s</string>
     <string name="video_init_error">there was an error initialising the video: %s</string>
+    <string name="date_formating_error">Error in formatting published at string date: %s</string>
 </resources>
